--- a/events.css
+++ b/events.css
@@ -10,16 +10,12 @@
     overflow-x: hidden;
     text-align: center;
   }
-
-  header {
-    background-color: olivedrab;
-  }
   
   h1 {
     font-size: 90px;
     margin-top: 0;
     line-height: 2;
-    color: #eaf0f0;
+    color: black;
   }
   
   h2 {
@@ -27,38 +23,6 @@
     font-size: 2.5rem;
     text-align: center;
     padding-top: 2%;
-  }
-  
-  #todo-hr {
-    border: dotted lightblue 6px;
-    border-bottom: none;
-    width: 4%;
-  }
-  
-  a {
-    color: #fcffff;
-    text-decoration: none;
-  }
-  
-  .message {
-    width: 100%;
-    padding-bottom: 2%;
-  }
-  
-  .btn {
-    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
-    border-radius: 8px;
-    font-family: "Montserrat", sans-serif;
-    color: #ffffff;
-    font-size: 20px;
-    padding: 10px 20px;
-    text-decoration: none;
-  }
-  
-  .btn:hover {
-    background: #30e3cb;
-    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
-    text-decoration: none;
   }
   
   .section-img {
@@ -98,5 +62,18 @@
   
 
 
+/* FOOTER */
+.footer{
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: wheat;
+  line-height: 10vh;
+  display:flex;
+  justify-content: space-around;
+}
 
-
+.footer a {
+  color: black;
+  text-decoration: none;
+}
